--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -2,15 +2,15 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="/fragments/head :: head"></head>
+<head th:replace="~{/fragments/head :: head}"></head>
 
 <body>
 
 <div class="dashboard-main-wrapper">
 
-    <div th:replace="/fragments/header :: header"></div>
+    <div th:replace="~{/fragments/header :: header}"></div>
 
-    <div th:replace="/fragments/left-sidebar :: left-sidebar"></div>
+    <div th:replace="~{/fragments/left-sidebar :: left-sidebar}"></div>
 
     <div class="dashboard-wrapper">
 
@@ -119,7 +119,8 @@
                                                     <label for="repassword" class="col-form-label">Confirm
                                                         Password</label>
                                                     <input id="repassword" type="password"
-                                                           placeholder="confirm your password" th:field="*{confirmPassWord}"
+                                                           placeholder="confirm your password"
+                                                           th:field="*{confirmPassWord}"
                                                            class="form-control">
                                                     <div class="invalid-feedback"
                                                          th:if="${#fields.hasErrors('confirmPassWord')}">
@@ -259,11 +260,11 @@
 
     </div>
 
-    <div th:replace="/fragments/footer :: footer"></div>
+    <div th:replace="~{/fragments/footer :: footer}"></div>
 
 </div>
 
-<div th:replace="/fragments/javascript :: js"></div>
+<div th:replace="~{/fragments/javascript :: js}"></div>
 
 </body>
 
